[gd_scene load_steps=57 format=3 uid="uid://ctjoin37130tl"]

[ext_resource type="Script" path="res://Scene/Main/player.gd" id="1_xgjgh"]
[ext_resource type="Shader" path="res://Scene/Main/main.gdshader" id="2_6bvwd"]
[ext_resource type="Texture2D" uid="uid://be3vm6rvcqr3a" path="res://sprite/characterAnimated/alvisanimated1.png" id="2_xr2pw"]
[ext_resource type="PackedScene" uid="uid://cdaygcqxuoell" path="res://playerHurtbox.tscn" id="4_r4ep4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gpu0g"]
size = Vector2(7, 35)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8polc"]
shader = ExtResource("2_6bvwd")
shader_parameter/rainbow = false
shader_parameter/line_color = Color(1, 0, 0, 0)
shader_parameter/line_scale = 1.0
shader_parameter/frequency = 0.5
shader_parameter/light_offset = 1.0
shader_parameter/alpha = 1.0

[sub_resource type="Animation" id="Animation_k5t4x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UnitSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UnitSprite:material:shader_parameter/line_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UnitSprite:material:shader_parameter/enable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ms0mf"]
resource_name = "dash_attack_active"
length = 0.4
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UnitSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [137, 138, 139]
}

[sub_resource type="Animation" id="Animation_v8rv0"]
resource_name = "dash_attack_ready"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [105, 106]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"on_superArmored"
}, {
"args": [],
"method": &"off_superArmored"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UnitSprite:material:shader_parameter/line_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UnitSprite:material:shader_parameter/enable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_60vd8"]
resource_name = "fall"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48]
}

[sub_resource type="Animation" id="Animation_bcbii"]
resource_name = "falling"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [60, 61]
}

[sub_resource type="Animation" id="Animation_hxpkq"]
resource_name = "idle"
length = 3.0
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 20, 21, 23, 22, 23, 24, 25, 26, 27, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("UnitSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_v4utq"]
resource_name = "jump"
length = 0.3
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [30, 31]
}

[sub_resource type="Animation" id="Animation_xj4rk"]
resource_name = "landing"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [75, 76, 77, 78, 79]
}

[sub_resource type="Animation" id="Animation_xbaaw"]
resource_name = "walk"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_0dn0v"]
resource_name = "wall_sliding"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 8]
}

[sub_resource type="Animation" id="Animation_dxnwg"]
resource_name = "wallslide"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dn8wl"]
_data = {
"RESET": SubResource("Animation_k5t4x"),
"dash_attack_active": SubResource("Animation_ms0mf"),
"dash_attack_ready": SubResource("Animation_v8rv0"),
"fall": SubResource("Animation_60vd8"),
"falling": SubResource("Animation_bcbii"),
"idle": SubResource("Animation_hxpkq"),
"jump": SubResource("Animation_v4utq"),
"landing": SubResource("Animation_xj4rk"),
"walk": SubResource("Animation_xbaaw"),
"wall_sliding": SubResource("Animation_0dn0v"),
"wallslide": SubResource("Animation_dxnwg")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_47jvm"]
animation = &"dash_attack_active"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o1hsq"]
animation = &"dash_attack_ready"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m6u74"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_71dk8"]
animation = &"falling"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7xyph"]
animation = &"wall_sliding"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gxqhq"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i7fgl"]
animation = &"landing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eto2u"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_alibo"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lioiu"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_qca2q"]
blend_point_0/node = SubResource("AnimationNodeAnimation_eto2u")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_alibo")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_lioiu")
blend_point_2/pos = 0.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6830n"]
animation = &"wallslide"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fgcg4"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7q8qc"]
advance_mode = 2
advance_condition = &"fall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o1wo6"]
advance_mode = 2
advance_condition = &"isOnFloor"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_frab4"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5tswa"]
advance_mode = 2
advance_condition = &"isOnFloor"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ijf0p"]
advance_mode = 2
advance_condition = &"isOnFloor"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xo83a"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cw3r6"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pwfor"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fpd2q"]
advance_mode = 2
advance_condition = &"isHangWall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kmu11"]
advance_mode = 2
advance_condition = &"isHangWall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_btt3i"]
advance_mode = 2
advance_condition = &"isHangWall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bvwub"]
advance_mode = 2
advance_condition = &"isOnFloor"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8t254"]
advance_mode = 2
advance_condition = &"fall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4ghg7"]
advance_mode = 2
advance_condition = &"fall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s4xnk"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6kdwj"]
advance_mode = 2
advance_condition = &"isHangWall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t0jmn"]
advance_mode = 2
advance_condition = &"hardLanding"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hq0cv"]
advance_mode = 2
advance_condition = &"hardLanding"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l1743"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ogdqk"]
advance_mode = 2
advance_condition = &"fall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h4xtq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6lwmj"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oq3dd"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0l1yo"]
states/End/position = Vector2(1009, 95)
states/Start/position = Vector2(-142, 124)
states/dash_attack_active/node = SubResource("AnimationNodeAnimation_47jvm")
states/dash_attack_active/position = Vector2(103.017, 340)
states/dash_attack_ready/node = SubResource("AnimationNodeAnimation_o1hsq")
states/dash_attack_ready/position = Vector2(-112.983, 243)
states/fall/node = SubResource("AnimationNodeAnimation_m6u74")
states/fall/position = Vector2(239.508, -58)
states/falling/node = SubResource("AnimationNodeAnimation_71dk8")
states/falling/position = Vector2(337.508, 11)
states/hangWall/node = SubResource("AnimationNodeAnimation_7xyph")
states/hangWall/position = Vector2(292.017, 198)
states/jump/node = SubResource("AnimationNodeAnimation_gxqhq")
states/jump/position = Vector2(103.017, -52)
states/landing/node = SubResource("AnimationNodeAnimation_i7fgl")
states/landing/position = Vector2(78.508, 187)
states/move/node = SubResource("AnimationNodeBlendSpace1D_qca2q")
states/move/position = Vector2(45.508, 74)
states/wallslide/node = SubResource("AnimationNodeAnimation_6830n")
states/wallslide/position = Vector2(502.017, 132)
transitions = ["move", "jump", SubResource("AnimationNodeStateMachineTransition_fgcg4"), "jump", "fall", SubResource("AnimationNodeStateMachineTransition_7q8qc"), "falling", "move", SubResource("AnimationNodeStateMachineTransition_o1wo6"), "fall", "falling", SubResource("AnimationNodeStateMachineTransition_frab4"), "fall", "move", SubResource("AnimationNodeStateMachineTransition_5tswa"), "jump", "move", SubResource("AnimationNodeStateMachineTransition_ijf0p"), "fall", "jump", SubResource("AnimationNodeStateMachineTransition_xo83a"), "falling", "jump", SubResource("AnimationNodeStateMachineTransition_cw3r6"), "Start", "move", SubResource("AnimationNodeStateMachineTransition_pwfor"), "jump", "hangWall", SubResource("AnimationNodeStateMachineTransition_fpd2q"), "fall", "hangWall", SubResource("AnimationNodeStateMachineTransition_kmu11"), "falling", "hangWall", SubResource("AnimationNodeStateMachineTransition_btt3i"), "hangWall", "move", SubResource("AnimationNodeStateMachineTransition_bvwub"), "hangWall", "fall", SubResource("AnimationNodeStateMachineTransition_8t254"), "hangWall", "falling", SubResource("AnimationNodeStateMachineTransition_4ghg7"), "hangWall", "jump", SubResource("AnimationNodeStateMachineTransition_s4xnk"), "move", "hangWall", SubResource("AnimationNodeStateMachineTransition_6kdwj"), "falling", "landing", SubResource("AnimationNodeStateMachineTransition_t0jmn"), "hangWall", "landing", SubResource("AnimationNodeStateMachineTransition_hq0cv"), "landing", "move", SubResource("AnimationNodeStateMachineTransition_l1743"), "move", "fall", SubResource("AnimationNodeStateMachineTransition_ogdqk"), "landing", "dash_attack_ready", SubResource("AnimationNodeStateMachineTransition_h4xtq"), "dash_attack_ready", "dash_attack_active", SubResource("AnimationNodeStateMachineTransition_6lwmj"), "dash_attack_active", "move", SubResource("AnimationNodeStateMachineTransition_oq3dd")]
graph_offset = Vector2(-420.983, -51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dyk8b"]
size = Vector2(10, 24)

[node name="player" type="CharacterBody2D" groups=["player"]]
position = Vector2(0, -19)
floor_snap_length = 3.0
script = ExtResource("1_xgjgh")
metadata/_edit_vertical_guides_ = []
metadata/_edit_horizontal_guides_ = []

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_gpu0g")

[node name="UnitSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_8polc")
position = Vector2(0, -44)
texture = ExtResource("2_xr2pw")
hframes = 15
vframes = 18
frame = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dn8wl")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dn8wl")
}
tree_root = SubResource("AnimationNodeStateMachine_0l1yo")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/fall = false
parameters/conditions/hardLanding = false
parameters/conditions/isHangWall = false
parameters/conditions/isOnFloor = false
parameters/conditions/jump = false
parameters/move/blend_position = 0.0

[node name="RightRayCast" type="RayCast2D" parent="."]
position = Vector2(8, 1)
rotation = -1.57079
target_position = Vector2(9.53674e-06, 4)

[node name="LeftRayCast" type="RayCast2D" parent="."]
position = Vector2(-9, 1)
rotation = -4.71422
target_position = Vector2(-0.00734138, 3.99999)

[node name="stateLabel" type="Label" parent="."]
visible = false
offset_left = -23.0
offset_top = -45.0
offset_right = 25.0
offset_bottom = -19.0

[node name="playerHurtbox" parent="." instance=ExtResource("4_r4ep4")]

[node name="Collision" parent="playerHurtbox" index="0"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_dyk8b")

[connection signal="animation_finished" from="AnimationTree" to="." method="_landing_animation_finished"]

[editable path="playerHurtbox"]
